--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 WEB3_PROVIDER_URI=https://evmrpc-testnet.0g.ai/
 FACTORY=0x9b6c5643fe2d98c09cb9db279a8c7e0065c3086c
 ROUTER=0xe233d75ce6f04c04610947188dec7c55790bef3b
+MULTI=0xF862D9884fb0d9510a8639fF346ad5E4Dcb5AB44
+NFTPOSITIOM=0x62df0e43e599a279015ffcff70c2cf82bd19d69a
+QUOTER=0xf6b3aa77683c8146ba1ab90dab268cf907bd3ad7
