--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ eth-typing==5.2.0
 eth-utils==5.2.0
 eth_abi==5.2.0
 Flask==3.1.0
+flask-cors==5.0.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
